--- a/emp-mgmt-backend/pom.xml
+++ b/emp-mgmt-backend/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>com.springboot.app.controller</groupId>
 	<artifactId>EmployeeDataService</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>EmployeeDataService</name>
 	<description>EmployeeDataService Project</description>
 
